# PotentiaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  cli.sh  vcpkg.json
assets/: frag.spv
assets/shaders/: compile_shaders.ps1  compile_shaders.sh  shader.vert
docs/: Assets.md  Config.md  Engine Modularity Designs.md  README.md
docs/assets/: MeshFormat.md  README.md
docs/hal/: HAL Interface Design.md
samples/: CMakeLists.txt
samples/triangle/: CMakeLists.txt
samples/triangle/src/: main.cpp
samples/triangle/src/level/: triangle_level.cpp  triangle_level.h
samples/triangle/src/structs/: vertex.h
src/potentia-core/: error.cpp  error.h  pch.h
src/potentia-core/base/: game_runnable.h  global_singleton.h
src/potentia-core/config/: config.h  config_flags.h  config_strings.h
src/potentia-engine/: engine_runtime.cpp  engine_runtime.h
src/potentia-engine/levels/: level_manager.cpp  level_manager.h
src/potentia-hal/: hal_factory.cpp  hal_factory.h  hal_storage.h
src/potentia-hal/interface/: buffer.h  commander.h  device.h  pipeline.h  pipeline_layout.h  shader.h  surface.h  window.h
src/potentia-hal/vulkan/: vk_buffer.cpp  vk_buffer.h  vk_commander.cpp  vk_commander.h  vk_device.cpp  vk_device.h  vk_pipeline.cpp  vk_pipeline.h  vk_pipeline_layout.cpp  vk_pipeline_layout.h  vk_shader.cpp  vk_shader.h  vk_surface.cpp  vk_surface.h  vk_window.cpp  vk_window.h
src/potentia-structure/: g_level.cpp  g_level.h
src/potentia-structure/base/: g_runnable.cpp  g_runnable.h
tools/: CMakeLists.txt
tools/assetbundler/: CMakeLists.txt  vcpkg.json
tools/assetbundler/src/: AssetBundler.cpp  AssetBundler.h  common.cpp  common.h  main.cpp
tools/assetbundler/src/io/: file_desc.h  file_manager.cpp  file_manager.h
tools/assetbundler/src/processor/: AssetFileProcessor.h
tools/assetbundler/src/processor/model/: ModelFileProcessor.cpp  ModelFileProcessor.h
tools/assetbundler/src/structures/: Vectors.h  Vertex.h
tools/gamecodegen/: CMakeLists.txt  vcpkg.json
tools/gamecodegen/src/: main.cpp
tools/importer/: CMakeLists.txt
tools/importer-mesh/: CMakeLists.txt
tools/importer-mesh/src/: main.cpp
tools/importer/src/: handler_manager.cpp  handler_manager.h  main.cpp
tools/importer/src/handler/: base_handler.h  mesh_handler.cpp  mesh_handler.h
